Closed Bug 1800302 Opened 2 years ago Closed 2 years ago

Crash in [@ mozilla::MediaMemoryTracker::GetSizes]

Categories

(Toolkit :: Performance Monitoring, defect)

Unspecified
All
defect

Tracking

()

RESOLVED FIXED
109 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox107 --- unaffected
firefox108 + fixed
firefox109 --- fixed

People

(Reporter: gsvelto, Assigned: pbone)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/eb329b60-5e2f-4927-b623-58f5e0221111

Reason: EXCEPTION_ACCESS_VIOLATION_READ

Top 10 frames of crashing thread:

0  xul.dll  mozilla::MediaMemoryTracker::GetSizes  dom/media/MediaDecoder.cpp:136
1  xul.dll  mozilla::GetMediaMemorySizes  dom/media/MediaDecoder.cpp:159
2  xul.dll  mozilla::CollectMemoryInfo  toolkit/components/perfmonitoring/PerformanceUtils.cpp:157
3  xul.dll  mozilla::dom::DocGroup::ReportPerformanceInfo  dom/base/DocGroup.cpp:313
4  xul.dll  mozilla::CollectPerformanceInfo  toolkit/components/perfmonitoring/PerformanceUtils.cpp:50
5  xul.dll  mozilla::dom::ContentChild::RecvRequestPerformanceMetrics  dom/ipc/ContentChild.cpp:1563
6  xul.dll  mozilla::dom::PContentChild::OnMessageReceived  ipc/ipdl/PContentChild.cpp:9489
7  xul.dll  mozilla::ipc::MessageChannel::DispatchAsyncMessage  ipc/glue/MessageChannel.cpp:1756
7  xul.dll  mozilla::ipc::MessageChannel::DispatchMessage  ipc/glue/MessageChannel.cpp:1681
7  xul.dll  mozilla::ipc::MessageChannel::RunMessage  ipc/glue/MessageChannel.cpp:1481

This crash appears to have been introduced by bug 1760920, Paul can you have a look please?

Flags: needinfo?(pbone)

Thanks, I'll fix it.

Assignee: nobody → pbone
Status: NEW → ASSIGNED
Flags: needinfo?(pbone)
Attachment #9303237 - Attachment description: Bug 1800302 - Avoid a null-pointer dereference r=padenot → Bug 1800302 - Fix a null-pointer dereference r=padenot

If possible, could this be reviewed and landed before the merge to beta in ~ 12 hours?

Flags: needinfo?(pbone)

diannaS, I see no problem with that, the fix is very simple. I'll NI padenot so he can prioritise it.

Flags: needinfo?(pbone) → needinfo?(padenot)
Pushed by padenot@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c6d17ccd23b5
Fix a null-pointer dereference r=padenot
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 109 Branch

Comment on attachment 9303237 [details]
Bug 1800302 - Fix a null-pointer dereference r=padenot

Beta/Release Uplift Approval Request

  • User impact if declined: Crashes.
  • Is this code covered by automated tests?: Unknown
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce: Unknown
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): I don't know if there are tests covering this code path, and the fix only just landed in nightly. However the patch itself is trivial and has no risk and therefore I believe this is a low-risk uplift.

See also Comment 3 requesting this make it into 108.

Thanks.

  • String changes made/needed: None
  • Is Android affected?: Unknown
Attachment #9303237 - Flags: approval-mozilla-beta?

Comment on attachment 9303237 [details]
Bug 1800302 - Fix a null-pointer dereference r=padenot

Approved for 108.0b2

Attachment #9303237 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

Set release status flags based on info from the regressing bug 1760920

Flags: needinfo?(padenot)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: