Bug 1800302 - Fix a null-pointer dereference r=padenot, a=dsmith

Differential Revision: https://phabricator.services.mozilla.com/D161972